odf-noobaa/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: photo-album
  name: photo-album
  namespace: demo
spec:
  replicas: 1
  selector:
    app: photo-album
    deploymentconfig: photo-album
  strategy:
    resources: {}
  template:
    metadata:
      labels:
        app: photo-album
        deploymentconfig: photo-album
    spec:
      containers:
      - image: quay.io/gfontana/photo-album
        name: photo-album
        ports:
        - containerPort: 8081
          protocol: TCP
        resources: {}
